fix: z-index menor que sidebar

--- a/src/app/modules/admin/apps/fabrica-credito/asignar-solicitudes/list-solicitudes/list-solicitudes.component.scss
+++ b/src/app/modules/admin/apps/fabrica-credito/asignar-solicitudes/list-solicitudes/list-solicitudes.component.scss
@@ -70,7 +70,7 @@
     left: -5px;
     height: 20px;
     bottom: calc(50% - 10px);
-    z-index: 1000;
+    z-index: 100;
 }
 
 // .leftScrollButton > mat-icon{
@@ -80,7 +80,7 @@
 .rigthScrollButton{
     height: 20px;
     bottom: calc(50% - 10px);
-    z-index: 1000;
+    z-index: 100;
 }
 
 
